packages/jsii/test/negatives/neg.class-name.1.ts
export class My_class {}
